--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
-machine: # 虛擬機的環境
-  node:
-    version: 10.16.3 #把剛剛得到的node version填到這裡
-  test:
-    - npm test  #每一個deploy到github上的commit都會執行npm test
+version: 2
+jobs:
+  build:
+    machine: # 虛擬機的環境
+      node:
+        version: 10.16.3 #把剛剛得到的node version填到這裡
+      test:
+        - npm test  #每一個deploy到github上的commit都會執行npm test
