--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,3 +6,22 @@ jobs:
         version: 10.16.3 #把剛剛得到的node version填到這裡
       test:
         - npm test  #每一個deploy到github上的commit都會執行npm test
+    steps:
+      - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run: yarn install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      # run tests!
+      - run: yarn test
