--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,14 @@ jobs:
 
       # run tests!
       - run: npm run test
+      
+      - deploy:
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              eb use env-dev --profile default
+              eb deploy --profile default
+            fi
+
     
   # build_dev:
   build_deploy:
