--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2
+orbs:
+  aws-cli: circleci/aws-cli@x.y
 jobs:
   build:
     machine: # 虛擬機的環境
@@ -30,26 +32,23 @@ jobs:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               pip install awsebcli
-              aws configure --profile "circle_ci_test"
-              aws configure list
               eb use env-dev --profile circle_ci_test
               eb deploy --profile circle_ci_test
             fi
 
     
   # build_dev:
-  build_deploy:
-    branches:
-      only:
-        - master
-    machine: # 虛擬機的環境
-      node:
-        version: 10.16.3 #把剛剛得到的node version填到這裡
-      test:
-        - npm test  #每一個deploy到github上的commit都會執行npm test
-      
+  aws-cli-example:
+    executor: aws-cli/default
     steps:
-      - run: pip install awsebcli
+      - checkout
+      - aws-cli/setup:
+          profile-name: circle_ci_test
 
-      - run: eb use env-dev --profile default
-      - run: eb deploy --profile default
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - aws-cli-example:
+          context: aws
