--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,6 @@ jobs:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               pip install awsebcli --upgrade
-              eb use env-dev $CIRCLE_BRANCH-my-application
-              eb deploy $CIRCLE_BRANCH-my-application
+              eb use env-dev --profile circle_ci_test
+              eb deploy --profile circle_ci_test
             fi
