--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - deploy:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              pip install awsebcli --upgrade
+              pip install awsebcli --upgrade pip
               eb use env-dev --profile circle_ci_test
               eb deploy --profile circle_ci_test
             fi
